--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -4,11 +4,10 @@ name: test-release
 # - TEST_PYPI_TOKEN (Token for Test PyPI)
 
 on: 
-  workflow_dispatch:
+  pull_request:
 
 jobs:
   test-release:
-    if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
 
     steps:
